modal.css
html {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: .9em;
    line-height: 1.2;
}

.text {
    margin: 0 auto;
    padding: 10px;
}


.modal {
    display: none;
    position: absolute;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.5);
}

.inner {
    background-color: #f6f6f6;
    margin: 10px auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
}

.close {
    color: #a84340;
    float: right;
    font-size: 12px;
    font-weight: bold;
}

.close:hover {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

